--- a/requirements.txt
+++ b/requirements.txt
@@ -1,144 +1,1 @@
-aiohttp==3.9.4
-aiosignal==1.3.1
-alpha-vantage==2.3.1
-annotated-types==0.6.0
-antlr4-python3-runtime==4.11.0
-antlr4-tools==0.2.1
-anyio==4.3.0
-appdirs==1.4.4
-appnope==0.1.4
-asttokens==2.4.1
-attrs==24.2.0
-audioread==3.0.1
-beautifulsoup4==4.12.3
-blinker==1.8.2
-boto3==1.34.96
-botocore==1.34.96
-certifi==2024.7.4
-cffi==1.16.0
-charset-normalizer==3.3.2
-click==8.1.7
-coloredlogs==15.0.1
-comm==0.2.2
-contourpy==1.2.1
-cycler==0.12.1
-Cython==3.0.10
-datasets==2.18.0
-debugpy==1.8.2
-decorator==5.1.1
-dill==0.3.8
-distro==1.9.0
-eval7==0.1.10
-executing==2.0.1
-fastjsonschema==2.20.0
-filelock==3.13.4
-Flask==3.0.3
-flatbuffers==24.3.25
-fonttools==4.53.1
-frozendict==2.4.2
-frozenlist==1.4.1
-fsspec==2024.2.0
-future==1.0.0
-h11==0.14.0
-html5lib==1.1
-httpcore==1.0.5
-httpx==0.27.0
-huggingface-hub==0.22.2
-humanfriendly==10.0
-idna==3.7
-inflect==7.4.0
-install-jdk==1.1.0
-ipykernel==6.29.5
-ipython==8.26.0
-itsdangerous==2.2.0
-jedi==0.19.1
-Jinja2==3.1.4
-jmespath==1.0.1
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2023.12.1
-jupyter_client==8.6.2
-jupyter_core==5.7.2
-kiwisolver==1.4.5
-lazy_loader==0.4
-librosa==0.10.2.post1
-llvmlite==0.43.0
-lxml==5.2.1
-MarkupSafe==2.1.5
-matplotlib==3.9.1
-matplotlib-inline==0.1.7
-more-itertools==10.5.0
-mpmath==1.3.0
-msgpack==1.0.8
-multidict==6.0.5
-multiprocess==0.70.16
-multitasking==0.0.11
-nbformat==5.10.4
-nest-asyncio==1.6.0
-networkx==3.3
-numba==0.60.0
-numpy==1.26.4
-onnx==1.16.1
-onnxruntime==1.17.0
-openai==1.25.1
-packaging==24.1
-pandas==2.2.2
-pandas-datareader==0.10.0
-parso==0.8.4
-peewee==3.17.3
-pexpect==4.9.0
-pillow==10.4.0
-platformdirs==4.2.2
-pooch==1.8.2
-prompt_toolkit==3.0.47
-protobuf==5.27.2
-psutil==6.0.0
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==15.0.2
-pyarrow-hotfix==0.6
-pycparser==2.22
-pydantic==2.7.1
-pydantic_core==2.18.2
-pydub==0.25.1
-Pygments==2.18.0
-pyparsing==3.1.2
-PyPDF2==3.0.1
-pyphen==0.15.0
-pyreadr==0.5.0
-python-dateutil==2.9.0.post0
-pytz==2024.1
-pyworld==0.3.4
-PyYAML==6.0.1
-pyzmq==26.0.3
-referencing==0.35.1
-requests==2.32.3
-rpds-py==0.20.0
-s3transfer==0.10.1
-scikit-learn==1.5.1
-scipy==1.14.0
-setuptools==71.0.1
-six==1.16.0
-sniffio==1.3.1
-soundfile==0.12.1
-soupsieve==2.5
-soxr==0.3.7
-stack-data==0.6.3
-sympy==1.13.0
-threadpoolctl==3.5.0
-torch==2.3.1
-torchvision==0.18.1
-tornado==6.4.1
-tqdm==4.66.4
-traitlets==5.14.3
-typeguard==4.3.0
-typing_extensions==4.12.2
-tzdata==2024.1
-urllib3==2.2.2
-wcwidth==0.2.13
-webencodings==0.5.1
-Werkzeug==3.0.3
-xxhash==3.4.1
-yarl==1.9.4
-yfinance==0.2.38
-zss==1.2.0
+`pip` command Error: Please specify the major and minor Python version (use command `pip3.12` or `pip3.13`)
